compiler/tests/en/errors/match_variant_unknown_member.salam
// EXPECT: E075
func main:
    x := 1
    v := match x:
        1 =>: ret 42 end
        else =>: ret "s" end
    end
    match v:
        i32 n =>: println n end
        bool b =>: println "bool arm" end
    end
end
